# deep-system-demos

./: .gitignore  README.md
1_bootloader/SentinelDOS/: attack.s  btcrypt.asm  build.sh  full_stage_debug.gdb  guard.s  instructions.txt  keysave.s  run.sh  stage1.asm  stage1_debug.gdb  stage2.asm  stage_debug_tui.gdb  stage_debug_tui_enhanced.gdb  vnc_imac.sh  wait.py
1_bootloader/pm_demo/: .gitignore  README.md  bootloader_stage1.asm  bootloader_stage2.asm  build_bootloader.sh  build_symbols.sh  load_symbols.gdb
2_kernel_debug/: run_linux_kernel.sh
2_kernel_debug/slim_kernel_build/: Arm-linux-instructions.txt  arm_kernel_debug.gdb  init_once.sh  run_arm_linux.sh  update_kernel_config.sh
3_microarch_demos/: .gitignore  ache_random_demo  ache_random_demo.c  perf-metrics.sh  store_buffer_demo.c  tlb_bench.sh
3_microarch_demos/cache_tlb_latency/: cache_bench.sh  cache_random_demo  contention_test.c  tlb_miss_demo  tlb_miss_demo.c
3_microarch_demos/false_sharing_perf_demo/: bind_threads.h  cache_pingpong_perf.c  cache_test  extreme_cache_test.c  extreme_test  perf_compare.sh  run_all_tests.sh
3_microarch_demos/lock_free_ring_buffer/: benchmark_mpmc.c  benchmark_mpsc.c  benchmark_spsc.c  ringbuffer_mpmc.c  ringbuffer_mpmc.h  ringbuffer_mpsc.c  ringbuffer_mpsc.h  ringbuffer_spsc.c  ringbuffer_spsc.h  test_mpmc.c  test_mpsc.c  test_spsc.c
3_microarch_demos/x86_vs_arm_memory_order/: README.md  build.sh  classic_reorder_test  classic_reorder_test.c  cpu_memory_model_test.c  run_and_trace.sh
4_ebpf_security/kernel-agent/: Cargo.toml
4_ebpf_security/kernel-agent/benches/: performance.rs
4_ebpf_security/kernel-agent/src/: Makefile  analyze_results.py  build_bpf.sh  memory_analyzer.bpf.c  memory_analyzer_loader.rs  perf_benchmark.sh  performance_optimized.bpf.c  sentinel.bpf.c  sentinel_fentry.bpf.c  sentinel_fentry_loader.rs  sentinel_loader.rs  syscall_modifier.bpf.c  syscall_modifier_loader.rs  vmlinux.h
4_ebpf_security/kernel-agent/src/asm/: posix_types.h
5_rust_vs_c/: .gdb_history  build_debug.sh  build_release.sh  generate_gdb_scripts.sh  setup_all.sh
5_rust_vs_c/bounds_check/: c_debug.gdb  c_release.gdb  rust_debug.gdb  rust_release.gdb
5_rust_vs_c/immutable/: c_debug.gdb  c_release.gdb  rust_debug.gdb  rust_release.gdb
5_rust_vs_c/ownership/: c_debug.gdb  c_release.gdb  rust_debug.gdb  rust_release.gdb
5_rust_vs_c/pointer/: c_debug.gdb  c_release.gdb  rust_debug.gdb  rust_release.gdb
5_rust_vs_c/unsafe_hw/: c_debug.gdb  c_release.gdb  rust_debug.gdb  rust_release.gdb
